// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`i18n should ignore translations for unknown languages 1`] = `
Object {
  "author": "Leo Tolstoy",
  "i18n": null,
  "id": "2",
  "shortSummary": null,
  "shortSummary.i18n": Object {
    "de": undefined,
    "en": null,
  },
  "title": "War and Peace",
  "title.i18n": Object {
    "de": "Krieg und Frieden",
    "en": "War and Peace",
  },
}
`;

exports[`i18n should store translations if provided 1`] = `
Object {
  "author": "Leo Tolstoy",
  "i18n": null,
  "id": "1",
  "shortSummary": null,
  "shortSummary.i18n": Object {
    "de": undefined,
    "en": null,
  },
  "title": "War and Peace",
  "title.i18n": Object {
    "de": "Krieg und Frieden",
    "en": "War and Peace",
  },
}
`;

exports[`i18n should store translations of multiple attributes 1`] = `
Object {
  "author": "Leo Tolstoy",
  "i18n": null,
  "id": "4",
  "shortSummary": "The novel chronicles the history of ...",
  "shortSummary.i18n": Object {
    "de": "Krieg und Frieden ist ein historischer Roman des ...",
    "en": "The novel chronicles the history of ...",
  },
  "title": "War and Peace",
  "title.i18n": Object {
    "de": "Krieg und Frieden",
    "en": "War and Peace",
  },
}
`;

exports[`i18n should take main value form translations object if provided 1`] = `
Object {
  "author": "Leo Tolstoy",
  "i18n": null,
  "id": "3",
  "shortSummary": null,
  "shortSummary.i18n": Object {
    "de": undefined,
    "en": null,
  },
  "title": "War and Peace",
  "title.i18n": Object {
    "de": "Krieg und Frieden",
    "en": "War and Peace",
  },
}
`;
